# cloudsim-ed-actuation

./: CMakeLists.txt  README.md  README.md~  cloudsim_deploy.sh~  deploy.bash  deploy.bash~  local_deploy.sh  local_deploy.sh~  package.xml~  readme.md  readme.md~  setup.bash  setup.sh  setup.sh~  setup_loc.sh~  setupx.bash  setupx.bash~
battery_indicator_plugin/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
battery_indicator_plugin/include/: BatteryIndicatorPlugin.hh  BatteryIndicatorPlugin.hh~
battery_indicator_plugin/src/: BatteryIndicatorPlugin.cc  BatteryIndicatorPlugin.cc~
battery_plugin/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
battery_plugin/include/: BatteryModelPlugin.hh  BatteryModelPlugin.hh~  BatteryModelPlugin.hh~.orig
battery_plugin/include/battery_plugin/: BatteryModelPlugin.hh
battery_plugin/msg/: Battery.msg  Battery.msg~
battery_plugin/src/: BatteryModelPlugin.cc  BatteryModelPlugin.cc~  BatteryModelPlugin.cc~.orig
cloudsim-ed-actuation/: CMakeLists.txt  package.xml  readme.md  readme.md~
cloudsim-ed-actuation/launch/: cloud-ed.launch  cloudsim_ed_actuation_task_01.launch
cloudsim-ed-actuation/notebooks/: demo_script.py
cloudsim-ed-actuation/scripts/: run_gazebo
cloudsim-ed-actuation/worlds/: cloudsim-ed-actuation_task_01.world
cloudsim_ed_actuation/: CMakeLists.txt  CMakeLists.txt~  package.xml  readme.md  setup.sh  setup.sh~
cloudsim_ed_actuation/launch/: cloud-ed.launch  cloud-ed.launch~  cloudsim_ed_actuation_challenge_01.launch  cloudsim_ed_actuation_task_01.launch~  cloudsim_ed_actuation_task_01_01.launch~  cloudsim_ed_actuation_task_01_02.launch  cloudsim_ed_actuation_task_01_02.launch~
cloudsim_ed_actuation/notebooks/: Actuation_Challenge_01.ipynb  Actuation_Task_01_02.ipynb  Alt_Control_Test.ipynb  Control_Test.ipynb  Task_01-01.ipynb  Task_01-01.py
cloudsim_ed_actuation/notebooks/.ipynb_checkpoints/: Actuation_Task_01_01-checkpoint.ipynb  Control_Test-checkpoint.ipynb  Task_01-01-checkpoint.ipynb  Untitled0-checkpoint.ipynb
cloudsim_ed_actuation/scripts/: run_gzserver
cloudsim_ed_actuation/worlds/: cloudsim_ed_actuation_challenge_01.world  cloudsim_ed_actuation_challenge_01.world~  cloudsim_ed_actuation_task_01.world  cloudsim_ed_actuation_task_01.world~  cloudsim_ed_actuation_task_01_01.world  cloudsim_ed_actuation_task_01_01.world~  cloudsim_ed_actuation_task_01_02.world~
gazebo_models/asphalt_plane/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gazebo_models/basic_robot/: CMakeLists.txt  model.sdf  model.sdf.orig  model.sdf~
gazebo_models/construction_cone/: CMakeLists.txt~  package.xml
gazebo_models/gate/: CMakeLists.txt  model.sdf  model.sdf~  package.xml
gazebo_models/gate_number_1/: CMakeLists.txt  package.xml
gazebo_models/gate_number_2/: CMakeLists.txt  package.xml
gazebo_models/gate_number_3/: CMakeLists.txt  package.xml
gazebo_models/gate_number_4/: CMakeLists.txt  package.xml
gazebo_models/gate_number_5/: CMakeLists.txt  package.xml
gazebo_models/map1/: CMakeLists.txt  CMakeLists.txt~  model.config~  package.xml~
gazebo_models/map2/: model.config  model.config~  model.sdf  package.xml  package.xml~
gazebo_models/map3/: CMakeLists.txt  CMakeLists.txt~  model.config  model.sdf  package.xml~
gazebo_models/ramp_10/: model.sdf  model.sdf~
gazebo_models/ramp_15/: CMakeLists.txt  CMakeLists.txt~  model.config  model.config~  model.sdf  model.sdf~  package.xml
gazebo_models/ramp_20/: CMakeLists.txt  model.config  model.sdf  model.sdf~  package.xml  package.xml~
gazebo_models/ramp_60/: CMakeLists.txt  CMakeLists.txt~  model.config  model.sdf  model.sdf~  package.xml  package.xml~
gazebo_models/test_motor/: CMakeLists.txt  model.config  model.sdf  package.xml
gazebo_ros_diff_drive_torque_ctrl/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
gazebo_ros_diff_drive_torque_ctrl/include/: gazebo_ros_diff_drive_torque_ctrl.hh  gazebo_ros_diff_drive_torque_ctrl.hh~  gazebo_ros_diff_drive_torque_ctrl.h~
gazebo_ros_diff_drive_torque_ctrl/src/: gazebo_ros_diff_drive_torque_ctrl.cc  gazebo_ros_diff_drive_torque_ctrl.cc~  gazebo_ros_diff_drive_torque_ctrl.cpp  gazebo_ros_diff_drive_torque_ctrl.cpp~
gazebo_tutorials/: CMakeLists.txt  CMakeLists.txt~  model_push.sdf~  package.xml
gazebo_tutorials/src/: model_push.cc  simple_world_plugin.cc
launch/: cloudsim-ed-actuation_task_01.launch  cloudsim-ed-actuation_task_01.launch~
maps/: 10square_pen.sdf  invader  invader_map.sdf  map_e.sdf~  seven-segment.sdf  test_coords.sdf
models/basic_robot/: model.config~  model.sdf
notebooks/: demo_script.py~
scoring_plugins/: CMakeLists.txt  CMakeLists.txt~  package.xml
scoring_plugins/include/: GateScoringPlugin.hh  GateScoringPlugin.hh~
scoring_plugins/msg/: Score.msg
scoring_plugins/src/: GateScoringPlugin.cc  GateScoringPlugin.cc~
worlds/: cloudsim-ed-actuation_task_01.world~  cloudsim_ed_actuation_task_01.world~
(+8 files in other folders)
